# shogle

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.md
demos/: CMakeLists.txt  hello_cirno.cpp  hello_quad.cpp
demos/hello_quad/: main.cpp
demos/res/: 2hus.json
demos/res/shaders/: frag_color.fs.glsl  frag_font.fs.glsl  frag_tex.fs.glsl  vert_atlas.vs.glsl  vert_base.vs.glsl  vert_font.vs.glsl
demos/src/: boilerplate.hpp  hello_cirno.cpp
example/: CMakeLists.txt  danmaku_event_test.cpp  marisa_truco.cpp  rework.cpp  spritesheets.cpp  test_async.cpp  test_event.cpp  test_framebuffer.cpp  test_imgui.cpp  test_new.cpp
shogle/: CMakeLists.txt
shogle/include/: shogle.hpp
shogle/src/core/: engine.cpp  renderer.cpp  settings.cpp  threadpool.cpp
shogle/src/fs/: common.cpp  resources.cpp
shogle/src/input/: input.cpp
shogle/src/math/: collision.cpp
shogle/src/physics/: collision_2d.cpp
shogle/src/render/: framebuffer.cpp  gl.cpp  glfw.cpp  imgui.cpp  model.cpp  shader.cpp  sprite.cpp  spritesheet.cpp  texture.cpp
shogle/src/res/: asset_loaders.cpp  assets.cpp  global.cpp  shader.cpp  spritesheet.cpp  texture.cpp
shogle/src/scene/: camera.cpp  camera2d.cpp  model.cpp  sprite.cpp
shogle/src/util/: fs.cpp
src/: CMakeLists.txt  assert.hpp  config.hpp  config.hpp.in  core.hpp  engine.cpp  global.cpp  input.cpp  log.cpp  logger.hpp  main.cpp  platform_macros.hpp  settings.cpp  shogle.cpp  shogle.hpp  threadpool.cpp  util.cpp  version.hpp.in
src/assets/: asset.hpp  assets.hpp  assets.inl  atlas.cpp  atlas.hpp  common.hpp  filesystem.hpp  font.cpp  font.hpp  font.inl  fs.hpp  meshes.hpp  model.cpp  model.hpp  model.inl  pool.hpp  pool.inl  texture.cpp  texture.hpp  texture.inl  types.hpp
src/assets/shaders/: instanced_font.hpp
src/core/: engine.cpp  game_state.cpp  glfw.cpp  input.cpp  logger.cpp  model.cpp  renderer.cpp  scene.cpp  settings.cpp  shader.cpp  sprite.cpp  sprite_object.cpp  texture.cpp  threadpool.cpp  window.cpp
src/engine/: instanced_font.cpp  meshes.cpp
src/event/: event_handler.cpp  input_handler.cpp
src/level/: level.cpp  sprite_object.cpp  test_level.cpp
src/math/: aabb.hpp  alg.hpp  collision.cpp  common.hpp  complex.hpp  math.hpp  matrix.hpp  ode.hpp  quaternion.hpp  vector.hpp
src/render/: attribute.hpp  attributes.hpp  buffer.cpp  buffer.hpp  camera.hpp  common.cpp  common.hpp  context.cpp  context.hpp  forward.hpp  framebuffer.cpp  framebuffer.hpp  glfw.cpp  glwindow.cpp  imgui.cpp  imgui.hpp  keys.hpp  meshes.cpp  meshes.hpp  model.cpp  model_renderer.cpp  opengl.cpp  opengl.hpp  pipeline.cpp  pipeline.hpp  platform.hpp  platform_macros.hpp  render.hpp  render_loop.hpp  renderer.cpp  renderer.hpp  renderloop.hpp  resource.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite_renderer.cpp  texture.cpp  texture.hpp  transform.hpp  (+5 more)
src/render/ext/: imgui.cpp  imgui.hpp  window.cpp  window.hpp
src/render/gl/: buffer.cpp  context.cpp  context_private.hpp  framebuffer.cpp  loader.c  pipeline.cpp  texture.cpp  vertex.cpp
src/render/glfw/: glfw.hpp  window.hpp  window.inl
src/render/internal/: allocator.cpp  allocator.hpp  common.hpp  interface.hpp  opengl.cpp  opengl.hpp  platform.hpp
src/render/opengl/: buffer.cpp  buffer.hpp  common.hpp  context.cpp  context.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  framebuffer.inl  mesh.cpp  mesh.hpp  mesh.inl  opengl.cpp  opengl.hpp  pipeline.cpp  pipeline.hpp  program.cpp  shader.cpp  shader.hpp  shader.inl  state.cpp  state.hpp  texture.cpp  texture.hpp  texture.inl
src/res/: material.cpp  model.cpp  shader.cpp  spritesheet.cpp  texture.cpp
src/resource/: model.cpp  model_data.cpp  resource.cpp  shader.cpp  texture.cpp  texture_data.cpp
src/scene/: camera2d.cpp  camera3d.cpp  entity_pool.hpp  font.cpp  font.hpp  framebuffer.cpp  meshes.cpp  meshes.hpp  model.cpp  model_object.cpp  model_task.cpp  sprite.cpp  sprite_object.cpp  sprite_task.cpp  transform.hpp  transform.inl
src/scenes/: test.cpp
src/shogle/: CMakeLists.txt  core.hpp  engine.cpp  engine.hpp  engine.inl.hpp  keys.hpp  shogle.hpp
src/shogle/assets/: atlas.hpp  atlas.inl  common.hpp  font.hpp  font.inl  model.hpp  model.inl  pool.hpp  pool.inl  texture.hpp  texture.inl
src/shogle/core/: allocator.hpp  allocator.inl  common.hpp  error.hpp  expected.hpp  log.hpp  registry.hpp  singleton.hpp  sparse_set.hpp  task.hpp  task.inl.hpp  threadpool.cpp  threadpool.hpp  threadpool.inl  types.hpp  uninitialized.hpp
src/shogle/engine/: engine.cpp  engine.hpp  engine.inl.hpp  event_traits.hpp  renderer.hpp  renderer.inl.hpp  task.hpp  task.inl.hpp
src/shogle/math/: alg.hpp  calc.hpp  camera.hpp  collision.cpp  collision.hpp  conversions.hpp  math.hpp  misc.hpp  transform.hpp
src/shogle/render/: camera.hpp  camera.inl  common.hpp  common.inl  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  gl.cpp  gl.hpp  glfw.hpp  glfw.inl  glfw_keys.hpp  imgui.hpp  mesh.cpp  mesh.hpp  mesh.inl.hpp  render.cpp  render.hpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture.inl.hpp
src/shogle/res/: atlas.hpp  font.cpp  font.hpp  loader_data.cpp  loader_data.hpp  meshes.cpp  meshes.hpp  model.cpp  model.hpp  pool.hpp  pool.inl.hpp  shader.cpp  shader.hpp  spritesheet.cpp  spritesheet.hpp  texture.cpp  texture.hpp  util.cpp  util.hpp
src/shogle/resources/: model.cpp  spritesheet.cpp  texture.cpp  texture.hpp  util.hpp
src/shogle/scene/: camera.cpp  camera.hpp  camera.inl  camera.inl.hpp  entity_pool.hpp  registry.hpp  transform.cpp  transform.hpp  (+2 more)
src/stage/: model_object.cpp  stage.cpp
src/stl/: allocator.hpp  arena.cpp  arena.hpp  arena.inl  common.hpp  entity_pool.hpp  event.hpp  expected.hpp  function.hpp  function.inl  hashmap.hpp  logger.hpp  optional.hpp  ptr.hpp  singleton.hpp  task.hpp  threadpool.hpp  types.hpp
src/task/: common_model.cpp  common_sprite.cpp
src/util/: filesystem.cpp  fs.cpp  logger.cpp  memory.cpp  threadpool.cpp
test/: CMakeLists.txt
test/src/: test.cpp
tests/: CMakeLists.txt
tests/stl/: function.cpp  ptr.cpp
(+418 files in other folders)
